--- a/package.json
+++ b/package.json
@@ -65,6 +65,7 @@
     "ng2-smart-table": "1.1.0",
     "ng2-tree": "^2.0.0-alpha.10",
     "ngx-echarts": "1.2.2",
+    "ngx-facebook": "^2.4.0",
     "normalize.css": "6.0.0",
     "pace-js": "^1.0.2",
     "roboto-fontface": "0.8.0",
