--- a/package.json
+++ b/package.json
@@ -30,7 +30,8 @@
     "docs": "compodoc -p src/tsconfig.app.json -d docs",
     "docs:serve": "compodoc -p src/tsconfig.app.json -d docs -s",
     "prepush": "npm run lint:ci",
-    "release:changelog": "npm run conventional-changelog -- -p angular -i CHANGELOG.md -s"
+    "release:changelog": "npm run conventional-changelog -- -p angular -i CHANGELOG.md -s",
+    "publish":"ng build --prod --base-href 'https://freestock.market' && angular-cli-ghpages"
   },
   "dependencies": {
     "@agm/core": "1.0.0-beta.0",
