--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
     "docs:serve": "compodoc -p src/tsconfig.app.json -d docs -s",
     "prepush": "npm run lint:ci",
     "release:changelog": "npm run conventional-changelog -- -p angular -i CHANGELOG.md -s",
-    "publish":"npm run build:prod && ngh"
+    "publish":"npm run build:prod && echo 'freestock.market' > dist/CNAME && ngh"
   },
   "dependencies": {
     "@agm/core": "1.0.0-beta.0",
