--- a/package.json
+++ b/package.json
@@ -53,7 +53,7 @@
     "angular2-toaster": "4.0.0",
     "body-parser": "^1.18.2",
     "bootstrap": "4.0.0-beta.2",
-    "chart.js": "2.5.0",
+    "chart.js": "^2.5.0",
     "ckeditor": "4.6.2",
     "classlist.js": "1.1.20150312",
     "core-js": "^2.4.1",
