--- a/package.json
+++ b/package.json
@@ -62,6 +62,7 @@
     "intl": "1.2.5",
     "ionicons": "2.0.1",
     "leaflet": "1.0.3",
+    "moment-timezone": "^0.5.14",
     "nebular-icons": "1.0.6",
     "ng2-ckeditor": "^1.1.9",
     "ng2-smart-table": "1.1.0",
